-script runs all the way and generate html file -script generates 3 dataframes with summaries by individual, species*age, species; each including all applicable data - strange problems: still one use of tagID in input file, and reruning all investment calculations if I close and re-open R - need to figure out how to avoid duplicating columns when merging data (in a nicer way than I've implemented)

--- a/remake.yml
+++ b/remake.yml
@@ -78,7 +78,7 @@ targets:
     command: read_csv("data/accessoryParts.csv")
   
   LMA_raw:
-    command: read_csv("data/LMA_short.csv")
+    command: read_csv("data/LMA.csv")
   
   woodDensity_raw:
     command: read_csv("data/woodDensity.csv")
