--- a/remake.yml
+++ b/remake.yml
@@ -77,8 +77,10 @@ targets:
   InvestmentCategories:
     command: read_csv("data/accessoryParts.csv")
 
-  LMA_raw:
-    command: read_csv("data/LMA.csv")
+  LMA:
+    command:
+      - read_csv("data/LMA.csv")
+      - process_LMA(.)
 
   woodDensity_raw:
     command: read_csv("data/woodDensity.csv")
