--- a/remake_species_data.yml
+++ b/remake_species_data.yml
@@ -6,7 +6,7 @@ targets:
     depends:
       - ReproductionAllocation_all
       - AccessoryCosts_all
-      - LMA_raw
+      - LMA
       - woodDensity_raw
       - seedsize
       - HarvestData
@@ -158,7 +158,7 @@ targets:
     depends:
       - ReproductionAllocation_all
       - AccessoryCosts_all
-      - LMA_raw
+      - LMA
       - woodDensity_raw
       - seedsize
       - HarvestData
