--- a/remake.yml
+++ b/remake.yml
@@ -120,5 +120,5 @@ targets:
 
   SummaryInd:
     command: > 
-      summarise_by_individual(IndividualsList, ReproductionAllocation_all, Investment_FD_all,
+      summarise_by_individual(IndividualsList, ReproductionAllocation_all, Accessory_counts_all,
         AccessoryCosts_all, LMA, leafLifespan, wood_density_spp, seedsize)
