--- a/remake_species_data.yml
+++ b/remake_species_data.yml
@@ -842,3 +842,22 @@ targets:
         PILI_Investment,
         PUTU_Investment,
       element=I("FD"))
+
+  Accessory_counts_all:
+    command: >
+      combine_list_elements(
+        BAER_Investment,
+        BOLE_Investment,
+        COER_Investment,
+        EPMI_Investment,
+        GRBU_Investment,
+        GRSP_Investment,
+        HATE_Investment,
+        HEPU_Investment,
+        LEES_Investment,
+        PELA_Investment,
+        PEPU_Investment,
+        PHPH_Investment,
+        PILI_Investment,
+        PUTU_Investment,
+      element=I("accessory_counts"))
