--- a/remake.yml
+++ b/remake.yml
@@ -118,7 +118,22 @@ targets:
     command: plot_ReproductionAllocation_comparison_weight(ReproductionAllocation_all)
     plot: wide
 
-  Individual_all:
+  SummaryInd1:
     command: > 
       combine_by_individual(IndividualsList, ReproductionAllocation_all, Accessory_counts_all,
         AccessoryCosts_all, LMA, leafLifespan, wood_density_spp, seedsize)
+
+  SummarySppAge:
+    command: get_species_values(SummaryInd1, groups=I(c("species", "age")))
+
+  SummarySpp:
+    command: get_species_values(SummaryInd1, groups=I("species"))
+
+  SummaryInd_mature:
+    command: filterToMature(SummaryInd1)
+
+  SummarySpp_mature:
+    command: get_species_values(SummaryInd_mature, groups=I("species"))
+
+  SummaryInd:
+    command: scale_individual_variable(SummaryInd1, SummarySpp)
