Embed derived quntities into remake workflow
Closes #18

Squashed commit of the following:

commit f868cdc0b9638356f9e65a5188b2aa58865e840f
Author: Daniel Falster <daniel.falster@mq.edu.au>
Date:   Mon Aug 17 16:01:37 2015 +1000

    averages by species and patch age

commit 1030d59fd886f0f680620b0dd2761db14eb506eb
Author: Daniel Falster <daniel.falster@mq.edu.au>
Date:   Mon Aug 17 13:51:01 2015 +1000

    Remove as.factor

commit 6b94e4820873bd85e838013782e451e9c3d021c3
Author: Daniel Falster <daniel.falster@mq.edu.au>
Date:   Mon Aug 17 13:50:46 2015 +1000

    Remove some outdated stuff

commit 7119d64404e9ffe37eb23f265d70e3ff080f7865
Author: Daniel Falster <daniel.falster@mq.edu.au>
Date:   Fri Aug 14 13:55:08 2015 +1000

    Streamlined function for merging by individual

commit 2dd9cee94eb4c09edfb93d135b68b3ff6110c5d8
Author: Daniel Falster <daniel.falster@mq.edu.au>
Date:   Fri Aug 14 13:14:37 2015 +1000

    Embed extra calculations on accessory counts

commit bb5d30961a7bcc1d9d592d5f23ce23f1d1259736
Author: Daniel Falster <daniel.falster@mq.edu.au>
Date:   Fri Aug 14 11:51:18 2015 +1000

    White space

commit 84d93a47360609ad7c7ba7b7025575014aa2b946
Author: Daniel Falster <daniel.falster@mq.edu.au>
Date:   Fri Aug 14 11:45:48 2015 +1000

    Make function for SummaryInd

commit 323c9ddeac8bf96dfe17f299bf7fcb5a16ef7582
Author: Daniel Falster <daniel.falster@mq.edu.au>
Date:   Fri Aug 14 10:52:21 2015 +1000

    Simplify reproduction counts

commit ae28d5898536281ed29ad25b45f40df12133a6be
Author: Daniel Falster <daniel.falster@mq.edu.au>
Date:   Fri Aug 14 07:26:32 2015 +1000

    Emebed addtional accessory cost calcalculations

commit ecb34acc59864e2a9961407f0ec6346f6ab2d12f
Author: Daniel Falster <daniel.falster@mq.edu.au>
Date:   Fri Aug 14 07:24:58 2015 +1000

    Process wood desnity

commit 44efee53704e83c01f1d02ee2b103bb52b9eac92
Author: Daniel Falster <daniel.falster@mq.edu.au>
Date:   Fri Aug 14 06:57:01 2015 +1000

    process leavesperlenght and

--- a/remake.yml
+++ b/remake.yml
@@ -77,20 +77,30 @@ targets:
   InvestmentCategories:
     command: read_csv("data/accessoryParts.csv")
 
-  LMA_raw:
-    command: read_csv("data/LMA.csv")
+  LMA:
+    command:
+      - read_csv("data/LMA.csv")
+      - process_LMA(.)
 
-  woodDensity_raw:
-    command: read_csv("data/woodDensity.csv")
+  wood_density_spp:
+    command:
+      - read_csv("data/woodDensity.csv")
+      - process_wood_density(.)
 
-  seedSize_raw:
-    command: read_csv("data/seedsize.csv")
+  seedsize:
+    command:
+      - read_csv("data/seedsize.csv")
+      - process_seed_costs(., PartsSummary_all)
 
-  leafLifespan_raw:
-    command: read_csv("data/leaderGrowthLL.csv")
+  leavesPerLength:
+    command: 
+      - read_csv("data/leaves_per_length.csv")
+      - process_leaves_per_length(.)
 
-  leavesPerLength_raw:
-    command: read_csv("data/leaves_per_length.csv")
+  leafLifespan:
+    command: 
+      - read_csv("data/leaderGrowthLL.csv")
+      - process_leaf_lifespan(., leavesPerLength)
 
   figures:
     depends:
@@ -107,3 +117,23 @@ targets:
   figure/RA_comparison_weight.pdf:
     command: plot_ReproductionAllocation_comparison_weight(ReproductionAllocation_all)
     plot: wide
+
+  SummaryInd1:
+    command: > 
+      combine_by_individual(IndividualsList, ReproductionAllocation_all, Accessory_counts_all,
+        AccessoryCosts_all, LMA, leafLifespan, wood_density_spp, seedsize)
+
+  SummarySppAge:
+    command: get_species_values(SummaryInd1, groups=I(c("species", "age")))
+
+  SummarySpp:
+    command: get_species_values(SummaryInd1, groups=I("species"))
+
+  SummaryInd_mature:
+    command: filterToMature(SummaryInd1)
+
+  SummarySpp_mature:
+    command: get_species_values(SummaryInd_mature, groups=I("species"))
+
+  SummaryInd:
+    command: scale_individual_variable(SummaryInd1, SummarySpp)
