fixing little errors due to remake

--- a/remake.yml
+++ b/remake.yml
@@ -38,7 +38,9 @@ plot_options:
 targets:
   all:
     depends:
-      - data
+      - SummaryInd
+      - SummarySpp
+      - SummarySppAge
 
   CarbonInvestments.pdf:
     depends:
