--- a/remake.yml
+++ b/remake.yml
@@ -117,10 +117,15 @@ targets:
     command: plot_ReproductionAllocation_comparison_weight(ReproductionAllocation_all)
     plot: wide
 
+  variable_list:
+    command:
+      - read_csv("data/variable_names.csv")
+
   SummaryInd1:
-    command: > 
-      combine_by_individual(IndividualsList, ReproductionAllocation_all, Accessory_counts_all,
+    command:
+      - combine_by_individual(IndividualsList, ReproductionAllocation_all, Accessory_counts_all,
         AccessoryCosts_all, LMA, leafLifespan, wood_density_spp, seedsize)
+      - sort_by_variable(., variable_list)
 
   SummarySppAge:
     command: get_species_values(SummaryInd1, groups=I(c("species", "age")))
